[tool.poetry]
name = "teny"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
wikipedia = "^1.4.0"
utils = "^1.0.1"
cowpy = "^1.1.0"
python-dotenv = "^0.17.0"
youtube-dl = "^2021.4.17"
google-api-python-client = "^2.2.0"
"alexflipnote.py" = "^2.3.0"
discord-components = "^0.4.7"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
